--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
-# This is an example of your .env file format, which pnpm db:setup will create.
+# Environment variables for Admin Dashboard System
 # Note: this must be .env, not .env.local, without further configuration changes.
-POSTGRES_URL=postgresql://***
-STRIPE_SECRET_KEY=sk_test_***
-STRIPE_WEBHOOK_SECRET=whsec_***
+POSTGRES_URL=postgresql://postgres:EbmOZvvM@127.0.0.1:5432/admin_dashboard
 BASE_URL=http://localhost:3000
-AUTH_SECRET=***
+AUTH_SECRET=your_auth_secret_here_at_least_32_characters_long
